--- a/README
+++ b/README
@@ -1,34 +1,31 @@
+Simulation package for lattice models of the self-assembly of DNA origami. The models are intended to include only the most important details for allowing an explicit representation of the geometry of the system. Simulations are run in the grand cannonical ensemble, with constant temperature, annealing, and temperature parallel tempering variants available. Output is in simple text files, and visulation is accomplished with tikz/pgfplots scripts.
+
+Implementation is with C++11.
+
 Dependencies:
 
-Standalone programs:
+    Libraries:
+        boost
+        JsonCpp
+        openmpi (other backends may be used by the boost mpi wrapper)
 
-Python 3
-Tex Live
-pdfunite
+    Standalone programs:
+        latex
 
-Python packages:
-
-h5py
-numpy
-scipy
-
-Latex packages:
-
-pgf/tikz
-tikz-3d-plot
+    Latex packages:
+        pgf/tikz
+        tikz-3d-plot
 
 Running simulations:
 
-An example script is given in simulate_example_origami.py. To run:
+An example scripts are given as tests/*.inp. To run a serial simulation:
 
-pythom [simulation script] > [log file]
+latticeDNAOrigami -i [simulation script] > [log file]
+
+To run a parallel simulation:
+
+mpirun -np [procs] latticeDNAOrigami -i [simulation script] > [log file]
 
 Visualizing simulations:
 
-Modify file name and step information in visualize_simulation.sh and run with:
-
-bash visualize_simulation.sh
-
 Analyzing simulations:
-
-TODO
